--- a/hu_luhu_71.adoc
+++ b/hu_luhu_71.adoc
@@ -15,20 +15,17 @@ summary: Describes how to use the Linux Unified Host Utilities 7.1 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-The Linux Unified Host Utilities enable you to connect a Linux host to NetApp storage.
+The Linux Unified Host Utilities assists you to manage NetApp ONTAP storage attached to a Linux host. NetApp strongly recommends installing the Linux Unified Host Utilities, but it is not mandatory. The utilities do not change any settings on your Linux host. The utilities improve management and assist NetApp customer support in gathering information about your configuration. 
 
-NetApp strongly recommends installing the Linux Unified Host Utilities, but it is not mandatory. The utilities do not change any settings on your Linux host. The utilities improve management and assist NetApp customer support in gathering information about your configuration. 
+.Supported Linux distributions
 
-.Supported Linux versions
-
-The following Linux versions are supported:
+The following Linux distributions are supported:
 
 *	Red Hat Enterprise Linux
 *	SUSE Linux Enterprise Server
 *	Oracle Linux
 *	Oracle VM
 *	Citrix XenServer
-*	Veritas
 
 .What you'll need
 
@@ -36,13 +33,13 @@ The following Linux versions are supported:
 +
 You can use the https://mysupport.netapp.com/matrix/imt.jsp?components=65623;64703;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^] to verify your configuration.
 
-* You must install the host bus adapter (HBA) management packages provided by the vendors on their websites.
+* You must install the host bus adapter (HBA) management packages available on the vendor support site.
 +
 The management software enables the SAN toolkit commands to gather information about the FC HBAs, such as their WWPNs. For the `sanlun fcp show adapter` command to work, verify that the following packages are installed:
 
-** QLogic HBA – QConvergeConsole CLI
-** Emulex HBA - OneCommand Manager core application CLI
-** Brocade HBA – Brocade Command Utility CLI
+** Marvell QLogic HBA – QConvergeConsole CLI
+** Broadcom Emulex HBA - OneCommand Manager core application CLI
+** Marvell Brocade HBA – Brocade Command Utility CLI
 
 * RPM Packages "libhbaapi" and "libhbalinux" available for each Linux Distribution should be installed on the host OS.
 
@@ -87,9 +84,9 @@ sanlun version
 sanlun version 7.1.386.1644
 ----
 
-== Default values recommended when using drivers bundled with Linux kernel
+== Recommended driver and firmware with Linux kernel
 
-When you are setting up an FC environment that uses the native, inbox drivers that are bundled with the Linux kernel, you can use the default values for the drivers. In iSCSI environments where you are using a iSCSI solution software, you need to manually set certain recommended values depending on the OS version you are using.
+When you configure an FC environment that uses native, inbox drivers that are bundled with the Linux kernel, you can use the default values for the drivers. 
 
 == SAN Toolkit
 
@@ -101,7 +98,7 @@ NOTE: This toolkit is common across all configurations and protocols of the Host
 
 NOTE: The SAN toolkit is not supported on Citrix XenServer, Oracle VM, and Red Hat Enterprise Virtualization Hypervisor.
 
-== Sample command reference 
+== Command reference 
 
 You can refer to the link:hu_luhu_71_cmd.html[sample command reference] to verify the installation.
 
