--- a/hu_luhu_71_cmd.adoc
+++ b/hu_luhu_71_cmd.adoc
@@ -15,14 +15,19 @@ summary: Describes how to use the Linux Unified Host Utilities 7.1 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-The Linux Unified Host Utilities enable you to connect a Linux host to NetApp storage.
+You can use the Linux Unified Host Utilities 7.1 command reference for an end-to-end validation  
 
-== Sample command reference
+== List all host initiators mapped to host
 
-=== List all host initiators mapped to host
+You can retrieve a list of all host initiators mapped to a host.
+
+[source,cli]
 ----
 # sanlun fcp show adapter -v
+----
 
+*Example output*
+----
 adapter name:      host15
 WWPN:              10000090fa022736
 WWNN:              20000090fa022736
@@ -59,8 +64,13 @@ OS device name:    /sys/class/scsi_host/host16
 ----
 
 === List all LUNs mapped to host
+You can retrieve a list of all LUNs mapped to a host.
+
 ----
 # sanlun lun show -p -v all
+----
+*Example output*
+----
 
                     ONTAP Path: vs_sanboot:/vol/sanboot_169/lun
                            LUN: 0
@@ -87,8 +97,13 @@ active      up        secondary  sdan   16:0:6:0     lif_28      66:112
 ----
 
 === List all LUNs mapped to host from a given SVM
+
+You can retrieve a list of all LUNs mapped to a host from a specific storage VM (SVM).
 ----
 # sanlun lun show -p -v vs_sanboot
+----
+*Example output*
+----
 
                     ONTAP Path: vs_sanboot:/vol/sanboot_169/lun
                            LUN: 0
@@ -115,8 +130,13 @@ active      up        secondary  sdfl    16:0:6:0     lif_16g_4       130:112
 ----
 
 === List all attributes of a given LUN mapped to host
+You can retrieve a list of all attributes of a specified LUN mapped to a host.
+
 ----
 # sanlun lun show -p -v vs_sanboot:/vol/sanboot_169/lun
+----
+*Example output*
+----
 
                     ONTAP Path: vs_sanboot:/vol/sanboot_169/lun
                            LUN: 0
@@ -143,8 +163,13 @@ active      up        secondary  sdfl    16:0:6:0     lif_16g_4         130:112
 ----
 
 === List the ONTAP SVM identity from which a given LUN is mapped to host
+You can retrieve a list of ONTAP SVM identity from which a specific LUN is mapped to a hist.
+
 ----
 # sanlun lun show -m -v vs_sanboot:/vol/sanboot_169/lun
+----
+*Example output*
+----
                                                              device          host                  lun
 vserver                       lun-pathname                   filename        adapter    protocol   size    product
 ---------------------------------------------------------------------------------------------------------------
@@ -161,9 +186,14 @@ vs_sanboot                    /vol/sanboot_169/lun           /dev/sdfm       hos
          Vserver snapshot name:
 ----
 
-=== List ONTAP LUN attributes by Host Device File name
+=== List ONTAP LUN attributes by host device filename
+You can retrieve a list of ONTAP LUN attributes by a host device filename.
+
 ----
 # sanlun lun show -d /dev/sdce
+----
+*Example output*
+----
 controller(7mode/E-Series)/                          device        host                lun
 vserver(cDOT/FlashRay)      lun-pathname           filename      adapter    protocol   size    product
 ----------------------------------------------------------------------------------------------------
@@ -172,8 +202,13 @@ vs_sanboot                 /vol/sanboot_169/lun    /dev/sdce     host15     FCP 
 ----
 
 === List all SVM target LIF WWPNs attached to host
+You can retrieve a list of all SVM target LIF WWPNs attached to a host.
+
 ----
 # sanlun lun show -wwpn
+----
+*Example output*
+----
 controller(7mode/E-Series)/   target                                            device          host       lun
 vserver(cDOT/FlashRay)        wwpn               lun-pathname                   filename        adapter    size    product
 -----------------------------------------------------------------------------------------------------------------------
@@ -184,8 +219,13 @@ vs_169_16gEmu                 202cd039ea1308e5   /vol/VOL_8g_169_2_5/lun        
 ----
 
 === List ONTAP LUNs seen on host by a given SVM target LIF WWPN
+You can retrieve a list of ONTAP LUNs noticed on a host by a specified SVM target LIF WWPN.
+
 ----
 # sanlun lun show -wwpn 2010d039ea1308e5
+----
+*Example output*
+----
 controller(7mode/E-Series)/   target                                     device         host       lun
 vserver(cDOT/FlashRay)        wwpn               lun-pathname            filename       adapter    size    product
 ---------------------------------------------------------------------------------------------------------------
