--- a/hu_luhu_71_cmd.adoc
+++ b/hu_luhu_71_cmd.adoc
@@ -15,7 +15,7 @@ summary: Describes how to use the Linux Unified Host Utilities 7.1 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-You can use the Linux Unified Host Utilities 7.1 command reference for an end-to-end validation  
+You can use the Linux Unified Host Utilities 7.1 command reference for an end-to-end validation. 
 
 == List all host initiators mapped to host
 
@@ -63,9 +63,10 @@ negotiated speed:  16 GBit/sec
 OS device name:    /sys/class/scsi_host/host16
 ----
 
-=== List all LUNs mapped to host
+== List all LUNs mapped to host
 You can retrieve a list of all LUNs mapped to a host.
 
+[source,cli]
 ----
 # sanlun lun show -p -v all
 ----
@@ -96,9 +97,11 @@ active      up        secondary  sdad   16:0:4:0     lif_27      66:96
 active      up        secondary  sdan   16:0:6:0     lif_28      66:112
 ----
 
-=== List all LUNs mapped to host from a given SVM
+== List all LUNs mapped to host from a given SVM
 
 You can retrieve a list of all LUNs mapped to a host from a specific storage VM (SVM).
+
+[source,cli]
 ----
 # sanlun lun show -p -v vs_sanboot
 ----
@@ -129,9 +132,10 @@ active      up        secondary  sdfj    16:0:4:0     lif_16g_3       130:80
 active      up        secondary  sdfl    16:0:6:0     lif_16g_4       130:112
 ----
 
-=== List all attributes of a given LUN mapped to host
+== List all attributes of a given LUN mapped to host
 You can retrieve a list of all attributes of a specified LUN mapped to a host.
 
+[source,cli]
 ----
 # sanlun lun show -p -v vs_sanboot:/vol/sanboot_169/lun
 ----
@@ -162,9 +166,10 @@ active      up        secondary  sdfj    16:0:4:0     lif_16g_3         130:80
 active      up        secondary  sdfl    16:0:6:0     lif_16g_4         130:112
 ----
 
-=== List the ONTAP SVM identity from which a given LUN is mapped to host
+== List the ONTAP SVM identity from which a given LUN is mapped to host
 You can retrieve a list of ONTAP SVM identity from which a specific LUN is mapped to a hist.
 
+[source,cli]
 ----
 # sanlun lun show -m -v vs_sanboot:/vol/sanboot_169/lun
 ----
@@ -186,9 +191,10 @@ vs_sanboot                    /vol/sanboot_169/lun           /dev/sdfm       hos
          Vserver snapshot name:
 ----
 
-=== List ONTAP LUN attributes by host device filename
+== List ONTAP LUN attributes by host device filename
 You can retrieve a list of ONTAP LUN attributes by a host device filename.
 
+[source,cli]
 ----
 # sanlun lun show -d /dev/sdce
 ----
@@ -201,9 +207,10 @@ vs_sanboot                 /vol/sanboot_169/lun    /dev/sdce     host15     FCP 
 [root@sr630-13-169 ~]#
 ----
 
-=== List all SVM target LIF WWPNs attached to host
+== List all SVM target LIF WWPNs attached to host
 You can retrieve a list of all SVM target LIF WWPNs attached to a host.
 
+[source,cli]
 ----
 # sanlun lun show -wwpn
 ----
@@ -218,9 +225,10 @@ vs_169_16gEmu                 202cd039ea1308e5   /vol/VOL_8g_169_2_7/lun        
 vs_169_16gEmu                 202cd039ea1308e5   /vol/VOL_8g_169_2_5/lun        /dev/sdll       host18     10g     cDOT
 ----
 
-=== List ONTAP LUNs seen on host by a given SVM target LIF WWPN
+== List ONTAP LUNs seen on host by a given SVM target LIF WWPN
 You can retrieve a list of ONTAP LUNs noticed on a host by a specified SVM target LIF WWPN.
 
+[source,cli]
 ----
 # sanlun lun show -wwpn 2010d039ea1308e5
 ----
