LUHU minor edit

--- a/hu_luhu_71.adoc
+++ b/hu_luhu_71.adoc
@@ -54,8 +54,8 @@ The management software enables the SAN toolkit commands to gather information a
 ----
 rpm -e netapp_linux_unified_host_utilities-7-1
 ----
-
-. For older versions of Linux Host Utilities, go to the directory where the host utility software is installed and enter the uninstall command.
++
+For older versions of Linux Host Utilities, go to the directory where the host utility software is installed and enter the uninstall command to remove the installed package.
 
 . Download the 32-bit or 64-bit Linux Unified Host Utilities software package from the link:https://mysupport.netapp.com/site/[NetApp Support Site^] to your host.
 
