--- a/hu_luhu_71.adoc
+++ b/hu_luhu_71.adoc
@@ -5,7 +5,7 @@ keywords: host utilities, unified, oracle, linux, 7.1, netapp, ontap
 summary: Describes how to use the Linux Unified Host Utilities 7.1 with ONTAP
 ---
 
-= Linux Unified Host Utilities 7.1
+= Install Linux Unified Host Utilities 7.1
 :toc: macro
 :hardbreaks:
 :toclevels: 1
