--- a/nvme_sles15_sp5.adoc
+++ b/nvme_sles15_sp5.adoc
@@ -1,8 +1,8 @@
 ---
 sidebar: sidebar
-permalink: nvme_ol_92.html
-keywords: nvme, oracle linux, 9.2, host configuration
-summary: NVMe-oF Host Configuration for Oracle Linux 9.2 with ONTAP
+permalink: nvme_sles15_sp5.html
+keywords: nvme, NVMe-oF, Host, SUSE Linux Enterprise Server 15 SP5, ONTAP
+summary: NVMe-oF Host Configuration for SUSE Linux Enterprise Server 15 SP5 with ONTAP
 ---
 
 = NVMe-oF Host Configuration for SUSE Linux Enterprise Server 15 SP5 with ONTAP
