--- a/nvme_aix.adoc
+++ b/nvme_aix.adoc
@@ -265,7 +265,8 @@ hdisk1  11       Enabled  Sel,Non      nvme60  fcnvme0, 9
 ----
 
 == Known issues 
-NVMe/FC host configuration for AIX with ONTAP has the following known issues:
+
+The NVMe/FC host configuration for AIX with ONTAP release has the following known issues:
 
 [cols="10,30,30",options="header"]
 |===
