--- a/nvme_ol_77.adoc
+++ b/nvme_ol_77.adoc
@@ -211,10 +211,10 @@ Device   Vserver  Namespace Path             NSID   UUID   Size
 ]
 ----
 
-==	Enabling 1MB I/O Size for Broadcom NVMe/FC
+==	Enabling 1MB I/O size for Broadcom NVMe/FC
 
 include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
 
-==	LPFC Verbose Logging
+==	LPFC verbose logging
 
 include::_include/nvme/reuse_nvme_verbose_logging.adoc[]
