--- a/nvme_ol_82.adoc
+++ b/nvme_ol_82.adoc
@@ -212,6 +212,6 @@ Device                 Vserver                         Namespace Path           
 
 ----
 
-== Enable 1MB I/O Size for Broadcom NVMe/FC
+== Enable 1MB I/O size for Broadcom NVMe/FC
 
 include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
