--- a/nvme_ol_83.adoc
+++ b/nvme_ol_83.adoc
@@ -352,6 +352,8 @@ Device      Vserver         Namespace Path             NSID UUID                
 
 == Known issues 
 
+The NVMe-oF host configuration for OL 8.3 with ONTAP release has the following known issues:
+
 [options="header", cols="20, 20, 50, 20"]
 |===
 |NetApp Bug ID |Title |Description |Oracle Bugzilla
@@ -361,16 +363,30 @@ On Oracle Linux 8.3 NVMe over Fabrics (NVMe-oF) hosts, you can use the `nvme dis
 
 == Troubleshooting
 
-Before commencing any troubleshooting for any NVMe/FC failures, make sure that you are running a configuration that is compliant to the Interoperability Matrix Tool (IMT) specifications and then proceed with the next steps to debug any host side issues.
+Before troubleshooting any NVMe-oF failures, verify that you are running a configuration that is compliant to the IMT specifications and then proceed with the next steps to debug any host side issues.
 
-=== LPFC verbose logging
+=== Enable verbose logging
+
+If you have an issue with your configuration, verbose logging can provide essential information for troubleshooting.
+
+.Steps
+
+The procedure to set verbose logging for Qlogic (Qla2xxx) is different from the procedure to set LPFC verbose logging.
+
+[role="tabbed-block"]
+====
+
+.LPFC
+--
 
 include::_include/nvme/reuse_nvme_verbose_logging.adoc[]
+--
 
-=== qla2xxx verbose logging
-
+.Qla2xxx 
+--
 include::_include/nvme/reuse_nvme_qla2xxx_verbose_logging.adoc[]
-
+--
+====
 
 include::_include/hu/reuse_hu_common_nvme_cli_errors.adoc[]
 
