--- a/nvme_ol_86.adoc
+++ b/nvme_ol_86.adoc
@@ -348,6 +348,8 @@ NSID       UUID                                   Size
 
 == Known issues
 
+The NVMe-oF host configuration for OL 8.6 with ONTAP release has the following known issues:
+
 [options="header", cols="20, 20, 50, 20]
 |===
 |NetApp Bug ID	|Title	|Description	|Bugzilla ID
@@ -363,17 +365,30 @@ NSID       UUID                                   Size
 
 == Troubleshooting
 
-Before commencing any troubleshooting for any NVMe/FC failures, make sure that you are running a configuration that is compliant to the IMT specifications and then proceed with the next steps to debug any host side issues.
+Before troubleshooting any NVMe-oF failures, verify that you are running a configuration that is compliant to the IMT specifications and then proceed with the next steps to debug any host side issues.
 
-=== lpfc verbose logging
+=== Enable verbose logging
 
+If you have an issue with your configuration, verbose logging can provide essential information for troubleshooting.
+
+.Steps
+
+The procedure to set verbose logging for Qlogic (Qla2xxx) is different from the procedure to set LPFC verbose logging.
+
+[role="tabbed-block"]
+====
+
+.LPFC
+--
 
 include::_include/nvme/reuse_nvme_verbose_logging.adoc[]
+--
 
-
-=== qla2xxx verbose logging
-
+.Qla2xxx 
+--
 include::_include/nvme/reuse_nvme_qla2xxx_verbose_logging.adoc[]
+--
+====
 
 include::_include/hu/reuse_hu_common_nvme_cli_errors.adoc[]
 
