--- a/nvme_ol_90.adoc
+++ b/nvme_ol_90.adoc
@@ -415,7 +415,8 @@ NSID       UUID                                   Size
 ----
 
 == Known issues
-NVMe-OF host configuration for Oracle Linux 9.0 with ONTAP release has the following known issues:
+
+The NVMe-oF host configuration for Oracle Linux 9.0 with ONTAP release has the following known issues:
 
 [options="header", cols="20, 20, 50, 20]
 |===
