--- a/nvme_rhel_87.adoc
+++ b/nvme_rhel_87.adoc
@@ -440,7 +440,7 @@ NSID  UUID                                   Size
 
 == Known issues 
 
-The The NVMe-oF host configuration for RHEL 8.7 with ONTAP release has the following known issues:
+The NVMe-oF host configuration for RHEL 8.7 with ONTAP release has the following known issues:
 
 [cols="10,30,30,10",options="header"]
 |===
@@ -451,16 +451,30 @@ The The NVMe-oF host configuration for RHEL 8.7 with ONTAP release has the follo
 
 == Troubleshooting
 
-Before commencing any troubleshooting for any NVMe/FC failures, make sure you are running a configuration that is compliant to the Interoperability Matrix Tool (IMT) specifications and then proceed with the following steps to debug any host side issues.
+Before troubleshooting any NVMe-oF failures, verify that you are running a configuration that is compliant to the IMT specifications and then proceed with the next steps to debug any host side issues.
 
-=== lpfc verbose logging
+=== Enable verbose logging
+
+If you have an issue with your configuration, verbose logging can provide essential information for troubleshooting.
+
+.Steps
+
+The procedure to set verbose logging for Qlogic (Qla2xxx) is different from the procedure to set LPFC verbose logging.
+
+[role="tabbed-block"]
+====
+
+.LPFC
+--
 
 include::_include/nvme/reuse_nvme_verbose_logging.adoc[]
-  
-=== qla2xxx verbose logging
+--
 
+.Qla2xxx 
+--
 include::_include/nvme/reuse_nvme_qla2xxx_verbose_logging.adoc[]
-
+--
+====
 
 include::_include/hu/reuse_hu_common_nvme_cli_errors.adoc[]
 
