--- a/_include/hu/reuse_hu_contact_tech_support.adoc
+++ b/_include/hu/reuse_hu_contact_tech_support.adoc
@@ -1,4 +1,4 @@
-If you are still facing issues, collect the following files and command outputs and contact technical support for further triage:
+If you are still facing issues, collect the following files and command outputs and contact link:mysupport.netapp.com[NetApp support^] for further triage:
 
 ----
 cat /sys/class/scsi_host/host*/nvme_info
