--- a/nvme_aix.adoc
+++ b/nvme_aix.adoc
@@ -281,5 +281,4 @@ The NVMe/FC host configuration for AIX with ONTAP release has the following know
 
 == Troubleshooting
 
-Before troubleshooting any NVMe/FC failures, verify that you are running a configuration that is compliant to the IMT specifications.
-If you are still facing issues, contact technical support for further triage.
+Before troubleshooting any NVMe/FC failures, verify that you are running a configuration that is compliant to the Interoperability Matrix Tool (IMT) specifications. If you are still facing issues, contact link:mysupport.netapp.com[NetApp support^] for further triage.
