--- a/nvme_ol_85.adoc
+++ b/nvme_ol_85.adoc
@@ -35,7 +35,7 @@ include::_include/hu/reuse_hu_cloud_note.adoc[]
 
 == Known limitations
 
-None.
+There are no known limitations.
 
 == Configuration requirements
 
