--- a/nvme_ol_82.adoc
+++ b/nvme_ol_82.adoc
@@ -22,7 +22,7 @@ include::_include/hu/reuse_hu_cloud_note.adoc[]
 
 == Known limitations
 
-None.
+There are no known limitations.
 
 == Enable NVMe/FC
 
