--- a/nvme_ol_84.adoc
+++ b/nvme_ol_84.adoc
@@ -34,7 +34,7 @@ include::_include/hu/reuse_hu_cloud_note.adoc[]
 
 == Known limitations
 
-None.
+There are no known limitations.
 
 == Configuration requirements
 
