--- a/nvme_rhel_90.adoc
+++ b/nvme_rhel_90.adoc
@@ -17,18 +17,19 @@ summary: How to Configure NVMe-oF Host for RHEL 9.0 with ONTAP
 
 [.lead]
 
-== Supportability
 NVMe-oF (including NVMe/FC and NVMe/TCP) is supported with RHEL 9.0 with Asymmetric Namespace Access (ANA) required for surviving storage failovers (SFOs) on the ONTAP array. ANA is the ALUA equivalent in the NVM-oF environment, and is currently implemented with in-kernel NVMe Multipath. This document contains the details for enabling NVMe-oF with in-kernel NVMe Multipath using ANA on RHEL 9.0 and ONTAP as the target.
 
-include::_include/hu/reuse_hu_cloud_note.adoc[]
+Refer to the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for exact details regarding supported configurations.
 
 == Features
 * Starting RHEL 9.0, NVMe/TCP is no longer a technology preview feature (unlike RHEL 8) but a fully supported enterprise feature itself.
 * Starting RHEL 9.0, in-kernel NVMe multipath is enabled for NVMe namespaces by default, without the need for explicit settings (unlike RHEL 8).
 
 
-==  Configuration requirements
-Refer to the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for exact details regarding supported configurations.
+==  Known limitations
+
+There are no known limitations.
+
 
 == Enable in-kernel NVMe Multipath
 
