--- a/hu_solaris_62_cmd.adoc
+++ b/hu_solaris_62_cmd.adoc
@@ -1,11 +1,11 @@
 ---
 sidebar: sidebar
-permalink: hu_solaris_62.html
+permalink: hu_solaris_62_cmd.html
 keywords: host utilities, unified, oracle, linux, 7.1, netapp, ontap
 summary: Describes how to use the Linux Unified Host Utilities 7.1 with ONTAP
 ---
 
-= Solaris Host Utilities 6.2
+= Solaris command reference
 :toc: macro
 :hardbreaks:
 :toclevels: 1
