--- a/hu_luhu_71.adoc
+++ b/hu_luhu_71.adoc
@@ -102,5 +102,5 @@ NOTE: The SAN toolkit is not supported on Citrix XenServer, Oracle VM, and Red H
 
 == Command reference 
 
-You can refer to the link:hu_luhu_71_cmd.html[sample command reference] to verify the installation.
+Refer to the link:hu_luhu_71_cmd.html[sample command reference] for end-to-end validation of your storage configuration.
 
