--- a/hu_luhu_71_rn.adoc
+++ b/hu_luhu_71_rn.adoc
@@ -50,10 +50,18 @@ The intermittent host OS failure issue that occurs when running the `sanlun lun 
 
 == Known problems and limitations
 
-[cols=2,options="header", cols= "10, 30"]
+The Linux Host Utilities 7.1 release has the following known problems and limitations.
+
+[cols=3,options="header", cols= "10, 30, 30"]
 |===
-|NetApp Bug ID	|Description
-|1457017	|`sanlun` installation issues warning messages related to `libdevmapper.so` and `libnl.so` libraries. These warnings do not affect the functionality of `sanlun` kit.
+|NetApp Bug ID	|Title | Description
+|1457017	|`sanlun` installation issues warning messages related to `libdevmapper.so` and `libnl.so` libraries. These warnings do not affect the functionality of `sanlun` kit. | When you execute the Linux Unified Host Utilities CLI command - "sanlun fcp show adapter -v" on a SAN host, the command fails with an error message displaying that the library dependencies required for an host bus adapter (HBA) discovery cannot be 
+located:
+
+[root@hostname ~]# sanlun fcp show adapter -v
+Unable to locate /usr/lib64/libHBAAPI.so library
+Make sure the package installing the library is installed & loaded
+Refer to the public report 1508554.
 |===
 
 link:https://mysupport.netapp.com/site/bugs-online/product[NetApp Bugs Online^] provides complete information for most known issues, including suggested workarounds where possible.
