added copy clock for SAN toolkit command

--- a/_include/hu/reuse_hu_san_toolkit.adoc
+++ b/_include/hu/reuse_hu_san_toolkit.adoc
@@ -3,6 +3,8 @@ The toolkit is installed automatically when you install the NetApp Host Utilitie
 .Example
 
 In the following example, the `sanlun lun show` command returns LUN information.
+
+[source,cli]
 ----
 # sanlun lun show all
 ----
