--- a/hu_solaris_62.adoc
+++ b/hu_solaris_62.adoc
@@ -5,7 +5,7 @@ keywords: host utilities, unified, oracle, linux, 7.1, netapp, ontap
 summary: Describes how to use the Linux Unified Host Utilities 7.1 with ONTAP
 ---
 
-= Solaris Host Utilities 6.2
+= Install Solaris Host Utilities 6.2
 :toc: macro
 :hardbreaks:
 :toclevels: 1
@@ -15,7 +15,7 @@ summary: Describes how to use the Linux Unified Host Utilities 7.1 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-The Solaris Utilities enable you to connect a Solaris host to NetApp storage.
+The Solaris Utilities enable you to connect a Solaris host to the NetApp storage.
 
 The primary host utilities environments are: 
 
@@ -121,4 +121,5 @@ This toolkit is common across all configurations and protocols of the Host Utili
 
 == Command reference 
 
-Review the link:hu_solaris_62_cmd.html[sample command reference] for end-to-end validation of the Solaris host utilities installation.
+Refer to the link:hu_solaris_62_cmd.html[sample command reference] for an end-to-end validation of your storage configuration.
+
