--- a/hu_solaris_62_cmd.adoc
+++ b/hu_solaris_62_cmd.adoc
@@ -5,7 +5,7 @@ keywords: host utilities, unified, oracle, linux, 7.1, netapp, ontap
 summary: Describes how to use the Linux Unified Host Utilities 7.1 with ONTAP
 ---
 
-= Solaris command reference
+= Solaris 6.2 command reference 
 :toc: macro
 :hardbreaks:
 :toclevels: 1
@@ -15,10 +15,17 @@ summary: Describes how to use the Linux Unified Host Utilities 7.1 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-== List all host initiators mapped to host
+You can use the Solaris Host Utilities 6.2 sample command reference for an end-to-end validation of the NetApp storage configuration using the host utilities tool.
 
+== List all host initiators mapped to host
+You can retrieve a list of all host initiators mapped to a host.
+
+[source,cli]
 ----
 # sanlun fcp show adapter -v
+----
+*Example output*
+----
 adapter name:      qlc3
 WWPN:              21000024ff17a301
 WWNN:              20000024ff17a301
@@ -56,9 +63,14 @@ OS device name:    /dev/cfg/c6
 
 
 == List all LUNs mapped to host
+You can retrieve a list of all LUNs mapped to a host.
 
+[source,cli]
 ----
 # sanlun lun show -p -v all
+----
+*Example output*
+----
 
                     ONTAP Path: data_vserver:/vol1/lun1
                            LUN: 1
@@ -72,19 +84,29 @@ OS device name:    /dev/cfg/c6
 
 == List all LUNs mapped to host from a given SVM/ List all attributes of a given LUN mapped to host
 
+You can retrieve a list of all LUNs mapped to a host from a certain SVM.
+
+[source,cli]
 ----
 # sanlun lun show -p -v sanboot_unix`
+----
+*Example output*
+----
 ONTAP Path: sanboot_unix:/vol/sol_boot/sanboot_lun
                            LUN: 0
                       LUN Size: 180.0g
 
 ----
 
-== List ONTAP LUN attributes by Host Device File name
+== List ONTAP LUN attributes by host device filename
+You can retrieve a list of all ONTAP LUN attributes by specifying a host device filename.
 
+[source,cli]
 ----
 # sanlun lun show all
-
+----
+*Example output*
+----
 controller(7mode/E-Series)/                                         device
 vserver(cDOT/FlashRay)       lun-pathname                           filename
 ---------------------------------------------------------------------------------------------------------------
