--- a/_include/nvme/reuse_nvme_qla2xxx_verbose_logging.adoc
+++ b/_include/nvme/reuse_nvme_qla2xxx_verbose_logging.adoc
@@ -1,5 +1,4 @@
-There is no similar specific qla2xxx logging for NVMe/FC as for the `lpfc` driver. Therefore, you can set the general qla2xxx logging level using the following steps:
-
+There is no specific qla2xxx logging for NVMe/FC similar to that for the `lpfc` driver. Instead, set the general qla2xxx logging level.
 .Steps
 
 . Append the `ql2xextended_error_logging=0x1e400000` value to the corresponding `modprobe qla2xxx conf` file.
